# eia_2.0

./: .gitignore  EIA_WaterStew1.ipynb  EIA_WaterStew2.ipynb  EIA_WaterStew3.ipynb  README.md  pyproject.toml
datasets_merged/: README.md
datasets_thermoelectric/: README.md
notebooks/: 01_data_ingestion.ipynb  01_sidenotes.ipynb  02_decision_appendix.ipynb  02_profile_analysis.ipynb  02_sidenotes.ipynb  03_decision_appendix.ipynb  03_forensic_clean_for_analysis.ipynb  03_sidenotes.ipynb  04_sidenotes.ipynb  05_sidenotes.ipynb  EDIT_01_data_ingestion.ipynb  curr_01_eia_refactor.ipynb  deprec1_01_eia_fundamentals_rebuild.ipynb
scripts/: dataset_merger_backup_2.py  dataset_merger_backup_3.py  dataset_pipeline.py  sql_pipeline.py  utils.py
scripts/_deprecated/: dataset_merger.py  dataset_merger_backup_1.py
