[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eia-analysis"
version = "0.1.0"
description = "EIA thermoelectric data analysis"
requires-python = ">=3.9"
[project]
[project]
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "jupyter",
    "tqdm"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

